add in seller.email

--- a/payments_service/braintree/templates/braintree/emails/subscription_charged_successfully.html
+++ b/payments_service/braintree/templates/braintree/emails/subscription_charged_successfully.html
@@ -15,7 +15,7 @@
                 <td><img class="card" alt="__CC_TYPE__" src="/svg/__CC_TYPE__.svg" width="40" /> ending in {{ cc_truncated_id }}</td>
             </tr>
             <tr class="desc">
-                <th scope="row">{{ product.description }}</th>
+                <th scope="row">{{ product.description.en }}</th>
                 <td>${{ moz_trans.amount }} <span>per month</span></td>
             </tr>
             <tr class="period">
