--- a/payments_service/braintree/templates/braintree/emails/subscription_header.html
+++ b/payments_service/braintree/templates/braintree/emails/subscription_header.html
@@ -12,6 +12,6 @@
       <div id="wrapper">
         <div class="header">
             <div id="logo"></div>
-            <h1>{{ seller.name }}</h1>
-            <p class="user-email">placeholder@placeholder.com</p>
+            <h1>{{ seller.name.en }}</h1>
+            <p class="email"><a href="mailto:{{ seller.email }}">{{ seller.email }}</a></p>
         </div>
